@@ -9,6 +9,7 @@
 - added `controller.authorize([callback])` method
 - improved `translate` command in `total5` command-line tool
 - fixed link generator for email and phone numbers in `Markdown`
+- fixed auto-restarting app in the `debug` mode with bundles
 
 ========================
 0.0.2
